@startuml

interface TaskStorage
class PgTaskStorage
TaskStorage <|.. PgTaskStorage

class Allocator
interface CloudClient
class AwsCloudClient

Allocator *-- CloudClient
CloudClient <|.. AwsCloudClient
TaskStorage <.. Allocator

class Scheduler
interface VmAssigner
interface OrderedJobs
class Fifo
class Ascending
class Descending
interface JobAllocator
class BestFit
class WorstFit
class NextFit
class FirstFit

class DistributedLock
Scheduler *-- DistributedLock

Scheduler *-- VmAssigner
TaskStorage <.. Scheduler
VmAssigner <|.. SimpleVmAssigner
VmAssigner <|.. ComplexVmAssigner
ComplexVmAssigner *-- OrderedJobs
OrderedJobs <|.. Fifo
OrderedJobs <|.. Ascending
OrderedJobs <|.. Descending
ComplexVmAssigner *-- JobAllocator
JobAllocator <|.. BestFit
JobAllocator <|.. WorstFit
JobAllocator <|.. NextFit
JobAllocator <|.. FirstFit
ComplexVmAssigner *-- VmSlotSelector

class FailureDetector
Allocator <.. FailureDetector
TaskStorage <.. FailureDetector

class GrpcServer
class AgentApi
class PublicApi
TaskStorage <.. GrpcServer
GrpcServer *-- AgentApi
GrpcServer *-- PublicApi

class TaskRegistry
TaskRegistry o-- Allocator
TaskRegistry o-- GrpcServer
TaskRegistry o-- Scheduler
TaskRegistry o-- FailureDetector

@enduml
